Fixed some layout issues based on different resolutions

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -401,6 +401,7 @@ __________
 	transform: translate(-100%);
 	transition: transform 0.2s ease;
 	text-transform: uppercase;
+	box-shadow: inset 0px 0px 1px 5px;
 }
 .main-nav > div:nth-child(2){
 	grid-row-start: 1;
@@ -512,7 +513,7 @@ __________
 .bg1 > div{
 	display: flex;
 	flex-direction: column;
-	margin-top: -60vh;
+	margin-top: -55vh;
 	color: var(--fourth-color);
 	font-family: 'antro-bold', 'Montserrat','Roboto' ;
 	text-align: center;
@@ -696,11 +697,16 @@ __________
 		font-size: 0.8em;
 	}
 	.roadmap {
-		margin-top: -465px;
+		margin-top: -415px;
 		/* font-size: 1.3em; */
 		max-height: 635px;
 	}
- }
+}
+@media (min-width: 568px) and (min-height: 320px) {
+	.bg1>div{
+		margin-top: -25vh;
+	}
+} 
 @media (min-width: 576px) { 
 	.roadmap {
 		margin-top: -530px;
@@ -807,6 +813,8 @@ __________
 		grid-gap: 1em;
 	}
 }
+
+
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 	.scroll-home-btn{
@@ -827,6 +835,7 @@ __________
 		grid-auto-rows: auto;
 		border-right: 1px solid;
 		transition: all 0.2s ease;
+		box-shadow: none;
 	}
 	.main-nav > div {
 		margin: 0;
@@ -858,7 +867,6 @@ __________
 	.btn-nav:hover{
 		transform: scale(1);
 		box-shadow: 0px 1px 0px 0px;
-		border-bottom-left-radius: 15px;
 	}
 	.close-navigation{
 		transform: translateX(-100%);
